# TailKVM

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  TASK_LOG.md
.claude/agents/: build-debugger.md  codebase-analyst.md  input-hook-specialist.md  network-protocol-engineer.md  requirements-keeper.md  safety-reviewer.md  tauri-ui-engineer.md  test-release-engineer.md
.github/workflows/: ci.yml  release.yml
apps/tailkvm-ui/: README.md  index.html  package-lock.json  package.json
apps/tailkvm-ui/src/: main.ts  styles.css
apps/tailkvm-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/tailkvm-ui/src-tauri/src/: clipboard_sync.rs  forwarding.rs  ime_mode.rs  lib.rs  main.rs  router.rs  seamless.rs  session.rs  state.rs  tailnet.rs
crates/tailkvm-core/: Cargo.toml
crates/tailkvm-net/: Cargo.toml
crates/tailkvm-net/examples/: fake_receiver.rs
crates/tailkvm-net/src/: protocol.rs
crates/tailkvm-net/tests/: loopback.rs
crates/tailkvm-win32/: Cargo.toml
crates/tailkvm-win32/src/: clipboard.rs  clipboard_watch.rs  cursor.rs  desktop.rs  firewall.rs  ime_anchor.rs  ime_capture.rs  input.rs  key_class.rs  keyboard.rs  keyboard_hook.rs  keyboard_layout.rs  layout_graph.rs  lib.rs  monitor.rs  mouse.rs  mouse_hook.rs  raw_input_mouse.rs  screen_space.rs  timer_resolution.rs
crates/tailkvm-win32/tests/: clipboard_roundtrip.rs
docs/: implementation-audit-2026-06-02.md  keyboard-layout-ime-design.md  multi-client-runtime-design.md  os-limitations.md  raw-input-mouse-design.md  recovery.md  release-notes-v0.1.0-bobnote-2.md  release-notes-v0.1.0-bobnote-3.md  release-notes-v0.1.0-bobnote-4.md  release-notes-v0.1.0-bobnote-5.md  release-notes-v0.1.0-bobnote-6.md  release-notes-v0.1.0-bobnote.md  single-machine-testing.md  vm-test-env.md
tools/hyperv/: provision-tailkvm-vms.ps1
