[workspace]
resolver = "2"
members = [
  "apps/tailkvm-ui/src-tauri",
  "crates/tailkvm-core",
  "crates/tailkvm-win32",
  "crates/tailkvm-net",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Taiki Handa"]
repository = "https://github.com/Panda17TK/TailKVM"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
