[package]
name = "tailkvm-win32"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
serde = { workspace = true, features = ["derive"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_DataExchange", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_UI_HiDpi", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
