[package]
name = "tailkvm-ui"
version = "0.1.11"
description = "TailKVM desktop app — a Tailscale-based software KVM for Windows that shares one mouse, keyboard and clipboard across PCs over your tailnet."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tailkvm_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = "2"
tailkvm-win32 = { version = "0.1.0", path = "../../../crates/tailkvm-win32" }
tailkvm-net = { version = "0.1.0", path = "../../../crates/tailkvm-net" }
base64 = "0.22"
tokio = { workspace = true, features = ["full"] }

